<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:padding="@dimen/margin_50dp"
    tools:context=".activity.Verification">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/colordarkGrey"
        android:text="@string/enter_phone_number_and_verify_it"/>
</LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_phone_number">

        <com.google.android.material.textfield.TextInputEditText
            android:drawableStart="@drawable/ic_action_phone"
            android:id="@+id/phone_num_user"
            android:layout_width="match_parent"
            android:drawablePadding="10dp"
            android:inputType="phone"
            android:layout_height="wrap_content"
            app:keep_hint="true"/>
<!--            app:mask="+7(###) ### ## ##"/>-->

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom"
        >
        <Button

        android:id="@+id/get_sms_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_sms_code"
        android:background="@drawable/btn_bg"/>

    </LinearLayout>
</LinearLayout>