<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.UpdatePassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_50dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/old_pswd_label"
            style="@style/text_style_profile"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:drawableStart="@drawable/ic_action_phone"
                android:id="@+id/old_pswd"
                android:layout_width="match_parent"
                android:drawablePadding="10dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/old_pswd_label" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_marginTop="@dimen/margin_50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/text_style_profile"
            android:text="@string/new_pswd_label"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:drawableStart="@drawable/ic_action_phone"
                android:id="@+id/new_pswd"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:drawablePadding="10dp"
                android:layout_height="wrap_content"
                android:hint="@string/new_pswd_label" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:drawableStart="@drawable/ic_action_phone"
                android:id="@+id/new_pswd_confirm"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:drawablePadding="10dp"
                android:layout_height="wrap_content"
                android:hint="@string/cofirm_new_pswd" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/margin_50dp"
        android:layout_width="match_parent"
        android:layout_gravity="bottom"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_50dp">
        <Button

            android:id="@+id/update_pswd_btn"
            android:layout_width="match_parent"
            android:text="@string/save_btn"
            android:background="@drawable/btn_bg"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</LinearLayout>