<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment"
    android:paddingTop="80dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:text="@string/qr_code_label"/>

        <ImageView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/qrcode"
            android:layout_gravity="center"
            />

            <LinearLayout
                android:paddingTop="@dimen/margin_50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_action_time"
                        android:layout_gravity="center"
                        />

                    <TextView
                        android:layout_marginStart="20dp"
                        android:textSize="18sp"
                        android:textColor="@color/colorBlack"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/take_time"/>

            <TextView
                android:id="@+id/counter_time"
                android:layout_marginStart="50dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:text="00:00"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_set"/>

                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_action_center"
                        android:layout_gravity="center"
                        />

                    <TextView
                        android:id="@+id/parking_name"
                        android:layout_marginStart="20dp"
                        android:textSize="18sp"
                        android:textColor="@color/colorBlack"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/parking_name_label"/>



                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_set"/>
                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_action_parking"
                        android:layout_gravity="center"
                        />

                    <TextView
                        android:id="@+id/place_section"
                        android:layout_marginStart="20dp"
                        android:textSize="18sp"
                        android:textColor="@color/colorBlack"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/space_no"/>



                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_set"/>
                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_action_car"
                        android:layout_gravity="center"
                        />

                    <TextView
                        android:id="@+id/car_no_sel"
                        android:layout_marginStart="20dp"
                        android:textSize="18sp"
                        android:textColor="@color/colorBlack"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/selected_car"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_set"/>

                <Button
                    android:id="@+id/cancel_take_btn"
                    android:layout_marginLeft="@dimen/margin_50dp"
                    android:layout_marginRight="@dimen/margin_50dp"
                    android:layout_marginTop="@dimen/margin_50dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_bg"
                    android:text="@string/cancel_btn_label"/>
            </LinearLayout>

    </LinearLayout>

</FrameLayout>